@@ -25,11 +25,6 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>jline</groupId>
-			<artifactId>jline</artifactId>
-			<version>2.6</version>
-		</dependency>
 
 		<dependency>
 			<groupId>org.ow2.petals.dsb</groupId>
@@ -48,90 +43,77 @@
 			<artifactId>dsb-notification-service</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>eu.play-project</groupId>
+			<artifactId>play-commons-eventtypes</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>log4j</artifactId>
+					<groupId>log4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>eu.play-project</groupId>
+			<artifactId>play-eventadapter-abstractrdfsender</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.play-project</groupId>
+			<artifactId>play-eventadapter-abstractrdfreceiver</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<!-- in order to be able to use filters in the logback configuration side:   -->
+		<dependency>
+			<groupId>org.codehaus.janino</groupId>
+			<artifactId>janino</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
+				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<finalName>pubsub</finalName>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>
-								org.ow2.petals.dsb.pubsub.cli.Main
-							</mainClass>
 							<addClasspath>true</addClasspath>
+							<mainClass>eu.play_project.dcep.distribution.Main</mainClass>
 						</manifest>
 					</archive>
+					<argLine>-Djava.security.manager
+						-Djava.security.policy=proactive.java.policy
+						-Dproactive.communication.protocol=pnp
+						-Dproactive.pnp.port=9000
+						-Dproactive.http.port=9001
+						-Dproactive.rmi.port=1099
+					</argLine>
 				</configuration>
+				<executions>
+					<execution>
+						<id>make-my-jar-with-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
-	<profiles>
-		<profile>
-			<id>development</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-assembly-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>dev-assembly</id>
-								<configuration>
-									<appendAssemblyId>false</appendAssemblyId>
-									<attach>false</attach>
-									<descriptors>
-										<descriptor>
-											src/main/assembly/dev.xml
-										</descriptor>
-									</descriptors>
-								</configuration>
-								<phase>package</phase>
-								<goals>
-									<goal>attached</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>release</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-assembly-plugin</artifactId>
-						<configuration>
-							<appendAssemblyId>false</appendAssemblyId>
-							<descriptors>
-								<descriptor>
-									src/main/assembly/prod.xml
-								</descriptor>
-							</descriptors>
-						</configuration>
-						<executions>
-							<execution>
-								<id>dev-assembly</id>
-								<phase>package</phase>
-								<goals>
-									<goal>attached</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 </project>
